# oak

./: .bazelignore  .bazelrc  .ci.bazelrc  .clang-format  .clang-tidy  .codecov.yml  .devcontainer.json  .docker.env  .dockerignore  .envrc  .gitignore  .gitmodules  .hadolint.yaml  .lintignore  .markdownlint.yaml  .oak-lint-config.toml  .pre-commit-config.yaml  .prettierrc.yaml  .runner_bash_completion  .rustc_info.json  .rustdoc_fingerprint.json  .rustfmt.toml  .shellcheckrc  .travis.yml  .tsan_suppress  .xtask_bash_completion  .xtask_bash_completion.zwc  1  AGENTS.md  AUTHORS  BUILD  BUILD.test  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  Dockerfile  GEMINI.md  INSTALL.MD  INSTALL.md  LICENSE  (+41 more)
cargo/: BUILD  Cargo.toml  crates.bzl  fake_lib.rs
cargo/remote/: ahash-0.3.2.BUILD  aho-corasick-0.7.10.BUILD  ansi_term-0.11.0.BUILD  anyhow-1.0.28.BUILD  arc-swap-0.4.6.BUILD  async-stream-0.2.1.BUILD  async-stream-impl-0.2.1.BUILD  async-trait-0.1.30.BUILD  atty-0.2.14.BUILD  autocfg-1.0.0.BUILD  base64-0.10.1.BUILD  base64-0.11.0.BUILD  bitflags-1.2.1.BUILD  bumpalo-3.2.1.BUILD  byteorder-1.3.4.BUILD  bytes-0.5.4.BUILD  cc-1.0.52.BUILD  cfg-if-0.1.10.BUILD  chrono-0.4.11.BUILD  clap-2.33.0.BUILD  clap-2.33.1.BUILD  colored-1.9.3.BUILD  const-random-0.1.8.BUILD  const-random-macro-0.1.8.BUILD  either-1.5.3.BUILD  fnv-1.0.6.BUILD  fuchsia-zircon-0.3.3.BUILD  fuchsia-zircon-sys-0.3.3.BUILD  futures-0.3.4.BUILD  futures-0.3.5.BUILD  futures-channel-0.3.4.BUILD  futures-channel-0.3.5.BUILD  futures-core-0.3.4.BUILD  futures-core-0.3.5.BUILD  futures-executor-0.3.4.BUILD  futures-executor-0.3.5.BUILD  futures-io-0.3.4.BUILD  futures-io-0.3.5.BUILD  futures-macro-0.3.4.BUILD  futures-macro-0.3.5.BUILD  (+142 more)
codelab/: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  cargo-bazel-lock.json  cargo-no-std-bazel-lock.json  cargo-no-std-no-avx-bazel-lock.json  flake.nix
codelab/enclave_app/: BUILD
codelab/service/: BUILD  build.rs
demo_oc3_2024/: Cargo.toml  README.md  build_and_measure  build_hash  evidence-endorsements.textproto  evidence.textproto  malicious-evidence-endorsements.textproto  malicious-evidence.textproto
demo_oc3_2024/src/: main.rs
demo_oc3_2024/testdata/: BUILD  demo_endorsements.binarypb  demo_evidence.binarypb  demo_evidence.textproto  endorsements.textproto  fake_evidence.binarypb  oak-development.pem  vcek_milan.pem
enclave_apps/: Cargo.toml  README.md  deny.toml
enclave_apps/.cargo/: config.toml
enclave_apps/key_xor_test_app/: BUILD  Cargo.toml  README.md  build.rs
enclave_apps/oak_echo_enclave_app/: BUILD  Cargo.toml
enclave_apps/oak_echo_raw_enclave_app/: BUILD  Cargo.toml  README.md
enclave_apps/oak_functions_enclave_app/: BUILD  Cargo.toml  README.md
enclave_apps/oak_iree_enclave_app/: Cargo.toml
enclave_apps/oak_logcabin_endorser_enclave_app/: BUILD  README.md
enclave_apps/oak_lookup_enclave_app/: Cargo.toml
enclave_apps/oak_multi_process_test/: BUILD  Cargo.toml  README.md
enclave_apps/oak_orchestrator/: BUILD  Cargo.toml  build.rs
enclave_apps/oak_tensorflow_enclave_app/: Cargo.toml
enclave_apps/quirk_echo_enclave_app/: Cargo.toml
examples/: .dockerignore  BUILD  Cargo.toml  Dockerfile  deny.toml
examples/abitest/: config.toml  example.toml  oak_app_manifest.toml  run
examples/aggregator/: README.md  config.toml  example.toml  oak_app_manifest.toml  run
examples/authentication/: README.md
examples/certs/: AndroidManifest.xml  BUILD  README.md
examples/chat/: README.md  example.toml  oak_app_manifest.toml  run
examples/grpc_attestation/: example.toml
examples/hello_world/: BUILD  Cargo.toml  build.rs  config_cpp.toml  example.toml  example_cpp.toml  hello_world.go  oak_app_manifest.toml  oak_app_manifest_cpp.toml  run  run_deps
examples/http_server/: README.md  example.toml  oak_app_manifest.toml
examples/https_attestation/: example.toml
examples/injection/: example.toml  oak_app_manifest.toml
examples/machine_learning/: Cargo.toml  example.toml  run
examples/millionaires/: Cargo.toml
examples/minimal/: example.toml
examples/multinode/: run
examples/permissions/: permissions.toml
examples/private_set_intersection/: Cargo.toml  README.md  build.rs  example.toml  oak_app_manifest.toml  private_set_intersection.pem  private_set_intersection.sign  private_set_intersection_handler.sign  run  signatures.toml
examples/proxy_attestation/: example.toml  oak_app_manifest.toml
examples/running_average/: Cargo.toml  README.md  build.rs  example.toml  oak_app_manifest.toml  run  running_average_handler.sign  signatures.toml
experimental/: Cargo.toml  deny.toml
fuzz/: Cargo.toml  README.md  deny.toml
grpc_streaming_attestation/: Cargo.toml  README.md
grpc_unary_attestation/: Cargo.toml  build.rs
linter/: BUILD  MODULE.bazel  README.md  lib.rs  main.rs
micro_rpc_tests/: BUILD  Cargo.toml  README.md  build.rs
micro_rpc_workspace_test/: Cargo.toml  README.md  build.rs  deny.toml
oak_abi/: Cargo.toml  build.rs  deny.toml  index.html
oak_attestation/: BUILD  Cargo.toml  README.md  build.rs
oak_attestation_explain/: BUILD  Cargo.toml  README.md
oak_attestation_explain_cli/: BUILD  Cargo.toml  README.md
oak_attestation_explain_wasm/: BUILD  Cargo.toml  README.MD  index.html  serve.sh
oak_attestation_integration_tests/: BUILD  Cargo.toml  README.md  update_testdata_assert_no_breaking_changes
oak_attestation_verification/: BUILD  Cargo.toml  README.md  build.rs
oak_attestation_verification_test_utils/: BUILD  Cargo.toml
oak_channel/: BUILD  Cargo.toml  README.md  SPEC.md
oak_client/: BUILD  Cargo.toml  README.md  build.rs  deny.toml  index.html
oak_containers_agent/: Cargo.toml  README.md  build.rs
oak_containers_example_trusted_application/: Cargo.toml
oak_containers_hello_world_trusted_app/: BUILD  Cargo.toml  README.md  build.rs
oak_containers_hello_world_untrusted_app/: BUILD  Cargo.toml  README.md  build.rs
oak_containers_launcher/: BUILD  Cargo.toml  README.md  build.rs
oak_containers_orchestrator/: BUILD  Cargo.toml  README.md  build.rs
(+22751 files in other folders)
