###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(name = "oak")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

# https://github.com/bazel-contrib/bazel-lib
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")

# https://github.com/bazelbuild/bazel-skylib
bazel_dep(name = "bazel_skylib", version = "1.8.2")

# https://github.com/grpc/grpc-java
bazel_dep(name = "grpc-java", version = "1.71.0", repo_name = "io_grpc_grpc_java")

# https://github.com/bazelbuild/platforms
bazel_dep(name = "platforms", version = "1.0.0")

# https://github.com/bazel-contrib/toolchains_llvm
bazel_dep(name = "toolchains_llvm", version = "1.6.0")
bazel_dep(name = "bazel_features", version = "1.39.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain",
    link_flags = {
        "none-x86_64": [
            "-nostdlib",
        ],
    },
    llvm_version = "20.1.0",
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@oak_cc_toolchain_sysroot//:sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

# https://github.com/grpc/grpc
bazel_dep(name = "grpc", version = "1.72.0", repo_name = "com_github_grpc_grpc")

# https://github.com/google/boringssl
bazel_dep(name = "boringssl", version = "0.20250415.0")

# https://github.com/google/protobuf
bazel_dep(name = "protobuf", version = "30.0", repo_name = "com_google_protobuf")

# https://github.com/google/googletest
bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")

# https://github.com/google/re2
bazel_dep(name = "re2", version = "2025-11-05", repo_name = "com_google_re2")

# https://github.com/abseil/abseil-cpp
bazel_dep(name = "abseil-cpp", version = "20250512.1", repo_name = "com_google_absl")

# https://github.com/bazelbuild/rules_pkg
bazel_dep(name = "rules_pkg", version = "1.0.1")

# https://github.com/google/benchmark
bazel_dep(name = "google_benchmark", version = "1.9.1", repo_name = "com_github_google_benchmark")

# https://github.com/tink-crypto/tink-cc
bazel_dep(name = "tink_cc", version = "2.4.0", repo_name = "com_github_tink_crypto_tink_cc")

# https://github.com/bazel-contrib/rules_python
bazel_dep(name = "rules_python", version = "1.5.1", dev_dependency = True)
bazel_dep(name = "oak_linter", version = "0.1", dev_dependency = True)
local_path_override(
    module_name = "oak_linter",
    path = "linter",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)

# Need ignore_root_user_error to run in docker container in CI
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.11",
)

bazel_dep(name = "rules_android", version = "0.6.1")

remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions",
)
use_repo(remote_android_extensions, "android_gmaven_r8", "android_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

bazel_dep(name = "rules_kotlin", version = "2.1.4")

##### Nix pkgs

bazel_dep(name = "rules_nixpkgs_core", version = "0.13.0")

nix_repos = use_extension("//bazel/nix:extensions.bzl", "nix_repos", dev_dependency = True)
use_repo(nix_repos, "nix_linux_kernel", "nix_vanilla_linux_kernel")

##### OCI

bazel_dep(name = "rules_oci", version = "2.2.6")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci", dev_dependency = True)

# This is the base docker image we use to bundle example apps like hello world
# enclave apps. We don't build these, we pull them from the existing repo.
oci.pull(
    name = "distroless_cc_debian12",
    digest = "sha256:6714977f9f02632c31377650c15d89a7efaebf43bab0f37c712c30fc01edb973",
    image = "gcr.io/distroless/cc-debian12",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_cc_debian12", "distroless_cc_debian12_linux_amd64")

oak_toolchains = use_extension("//bazel:extensions.bzl", "oak_toolchains")
use_repo(oak_toolchains, "umoci")

register_toolchains("@umoci//:umoci_toolchain")

# Run clang-tidy on C++ code with the following command:
# bazel build //cc/... \
#   --aspects=@bazel_clang_tidy//clang_tidy:clang_tidy.bzl%clang_tidy_aspect \
#   --output_groups=report
git_repository(
    name = "bazel_clang_tidy",
    commit = "f43f9d61c201b314c62a3ebcf2d4a37f1a3b06f7",
    remote = "https://github.com/erenon/bazel_clang_tidy.git",
)

##### Java Dependencies #####

bazel_dep(name = "rules_jvm_external", version = "6.7")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.artifact(
    testonly = True,
    artifact = "kotlinx-coroutines-test",
    group = "org.jetbrains.kotlinx",
    version = "1.10.2",
)
maven.artifact(
    testonly = True,
    artifact = "kotlin-test",
    group = "org.jetbrains.kotlin",
    version = "2.1.20",
)
maven.artifact(
    testonly = True,
    artifact = "mockito-core",
    group = "org.mockito",
    version = "5.4.0",
)
maven.artifact(
    testonly = True,
    artifact = "mockito-kotlin",
    group = "org.mockito.kotlin",
    version = "5.1.0",
)
maven.artifact(
    testonly = True,
    artifact = "assertj-core",
    group = "org.assertj",
    version = "3.27.3",
)
maven.install(
    artifacts = [
        "co.nstant.in:cbor:0.9",
        "com.google.crypto.tink:tink:1.17.0",
        "com.google.errorprone:error_prone_annotations:2.38.0",
        "com.google.flogger:flogger-system-backend:0.9",
        "com.google.flogger:google-extensions:0.9",
        "com.google.protobuf:protobuf-kotlin:4.26.0",
        "javax.inject:javax.inject:1",
        "org.bouncycastle:bcprov-jdk18on:1.77",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2",
    ],
    generate_compat_repositories = True,
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(
    maven,
    "maven",
    # Unfortunately, we need to list each compat respository name that we want as well.
    "co_nstant_in_cbor",
    "com_google_code_gson_gson",
    "com_google_crypto_tink_tink",
    "com_google_guava_guava",
    "com_google_truth_truth",
    "javax_inject_javax_inject",
    "junit_junit",
    "org_bouncycastle_bcprov_jdk18on",
    "org_jetbrains_kotlin_kotlin_test",
    "org_mockito_kotlin_mockito_kotlin",
    "org_mockito_mockito_core",
)

# https://github.com/bazelbuild/rules_java
bazel_dep(name = "rules_java", version = "8.14.0")

##### Rust Toolchain Setup #####

bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.68.1")

##### rules_foreign_cc packages #####

# https://github.com/bazel-contrib/rules_foreign_cc
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")

# C++ CBOR support.
# https://android.googlesource.com/platform/external/libcppbor
git_repository(
    name = "libcppbor",
    build_file = "//:third_party/google/libcppbor/BUILD",
    # Head commit on 202505-09
    commit = "b1b998be4ec447f3086e7fd6a7f78eaec66a1c45",
    patches = [
        "//:third_party/google/libcppbor/remove_macro.patch",
        "//:third_party/google/libcppbor/limits.patch",
    ],
    remote = "https://android.googlesource.com/platform/external/libcppbor",
)

http_archive(
    name = "cose_lib",
    build_file = "//:third_party/BUILD.cose_lib",
    sha256 = "e41a068b573bb07ed2a50cb3c39ae10995977cad82e24a7873223277e7fdb4e5",
    strip_prefix = "cose-lib-2023.09.08",
    url = "https://github.com/android/cose-lib/archive/refs/tags/v2023.09.08.tar.gz",
)

http_archive(
    name = "e2fsprogs",
    build_file = "//:third_party/BUILD.e2fsprogs",
    sha256 = "144af53f2bbd921cef6f8bea88bb9faddca865da3fbc657cc9b4d2001097d5db",
    strip_prefix = "e2fsprogs-1.47.0",
    urls = ["https://mirrors.edge.kernel.org/pub/linux/kernel/people/tytso/e2fsprogs/v1.47.0/e2fsprogs-1.47.0.tar.xz"],
)

##### Base Image Files and Sysroot Files #####

# Experimental sysroot for the build toolchain, based on Oak Containers sysimage.
#
# Rebuild it using:
# $ oak_containers/system_image/build-base.sh sysroot
#
# Upload it using:
# $ oak_containers/system_image/push-base.sh sysroot
#
# (See oak_containers/system_image/README.md for more details.)
SYSROOT_SHA256 = "d6f608cf14b27bd4ae68f135b601b86bb9157a1a7a8fc08e43d7ff4ab7a18665"

http_archive(
    name = "oak_cc_toolchain_sysroot",
    build_file = "//:toolchain/sysroot.BUILD",
    sha256 = SYSROOT_SHA256,
    url = "https://storage.googleapis.com/oak-bins/sysroot/{}.tar.xz".format(SYSROOT_SHA256),
)

# The binary is used for stage0 tdx measurement test
# (//tdx_measurement:tdx_measurement_test) only.
STAGE0_BIN_TDX_COMMIT = "0689771e6fd6d174121eaa0b7df5fe54c4746ce3"

http_file(
    name = "stage0_tdx_bin_for_test",
    downloaded_file_path = "stage0_tdx_bin_for_test",
    sha256 = "87fe23ad59066718f97acfe2672f70e6ddfa488f7593d59b8886f67d0ca08715",
    url = "https://storage.googleapis.com/oak-bins/binary/{}/stage0_bin_tdx/binary".format(STAGE0_BIN_TDX_COMMIT),
)

BASE_IMAGE_SHA256 = "53e97815e12725b73a6bcf98ef0498c681843e0fbaed4449b48d6a247750f77a"

http_file(
    name = "oak_containers_system_image_base",
    downloaded_file_path = "base-image.tar.xz",
    sha256 = BASE_IMAGE_SHA256,
    url = "https://storage.googleapis.com/oak-bins/base-image/{}.tar.xz".format(BASE_IMAGE_SHA256),
)

NVIDIA_BASE_IMAGE_SHA256 = "10e665a269b79aef1e12a45a60abd1bf4638edae3bad0c41cec764ceacbfe0a9"

http_file(
    name = "oak_containers_nvidia_system_image_base",
    downloaded_file_path = "nvidia-base-image.tar.xz",
    sha256 = NVIDIA_BASE_IMAGE_SHA256,
    url = "https://storage.googleapis.com/oak-bins/nvidia-base-image/{}.tar.xz".format(NVIDIA_BASE_IMAGE_SHA256),
)
